welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:9: error: ';' expected but ')' found.
poseBrosse())
            ^