welcome.lessons.welcome.loopfor.LoopStairs.scala.code
avance()
avance()
avance()

gauche()
avance()
droite()
avance()
poseBrosse())
gauche()
avance()
leveBrosse()